# Simple-Notes-App

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_api.yml  integration_test.yml  test.yml
.streamlit/: secrets.toml
app/: api.py  app.py  date_utils.py  db.py  frontend.py  main.py  main_page.py  notes.db
app/entity/: note.py
app/templates/: index.html
tests/: conftest.py  frontend_ui.py  locustfile.py  test_api.py  test_db.py  test_frontend_unit.py
