[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [
    "Group 23"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.5"
bandit = "^1.8.3"
pytest-cov = "^6.1.1"
bcrypt = "^4.3.0"
flake8 = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
