[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    { name = "Askar Akhmetkhanov", email = "a.akhmetkhanov@innopolis.university" },
    { name = "Arseny Savchenko", email = "a.savchenko@innopolis.university" },
    { name = "Aleksei Kureikin", email = "a.kureikin@innopolis.university" },
    { name = "Said Nurullin", email = "s.nurullin@innopolis.university" },
    { name = "Mikhail Stepanov", email = "m.stepanov@innopolis.university" },
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.3.5"
bandit = "^1.8.3"
pytest-cov = "^6.1.1"
bcrypt = "^4.3.0"
flake8 = "^7.2.0"
flask = "^3.1.0"
requests = "^2.32.3"
streamlit = "^1.45.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
